--- a/002/index.html
+++ b/002/index.html
@@ -17,18 +17,12 @@
 	<!-- endinject -->
 	<style>
 	body {
-	    background-color: #efefef;
+	    background-color: #d3e8e5;
 	}
 
 	div.pro360 {
-	    height: 500px;
-	    width: 500px;
-	    margin-top: -250px;
-	    margin-left: -250px;
-	    top: 50%;
-	    position: absolute;
-	    border: 1px silver solid;
-	    left: 50%;
+	    height: 400px;
+	    width: 400px;
 	}
 	</style>
 
