--- a/001/index.html
+++ b/001/index.html
@@ -22,9 +22,14 @@
 
 	div.pro360 {
 	    height: 400px;
-	    width: 400px;
-	    
+	    width: 400px;  
 	}
+	@media (max-width: 767px) {
+  		div.pro360 {
+	    		height: 300px;
+	    		width: 300px;  
+	}
+  	}
 	</style>
 
 </head>
